--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,6 @@ iOSInjectionProject/
 ### SwiftPackageManager ###
 Packages
 xcuserdata
-*.xcodeproj
+# *.xcodeproj
 
 # End of https://www.toptal.com/developers/gitignore/api/swiftpackagemanager,swift,xcode
