--- a/hometerview/Info.plist
+++ b/hometerview/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>KAKAO_APP_KEY</key>
+	<string>f811c290471ec82c6e65a3c0c68a3bbc</string>
 	<key>BaseURL</key>
 	<string></string>
 	<key>UIAppFonts</key>
