add: 수정된 MainCell 수정, 기존 MainCellView를 DetailListCell로 변경

--- a/hometerview/Info.plist
+++ b/hometerview/Info.plist
@@ -17,6 +17,8 @@
 		<string>PRETENDARD-REGULAR.OTF</string>
 		<string>PRETENDARD-SEMIBOLD.OTF</string>
 		<string>PRETENDARD-THIN.OTF</string>
+		<string>Jalnan.ttf</string>
+		<string>JalnanOTF.otf</string>
 	</array>
 </dict>
 </plist>
