--- a/hometerview/Info.plist
+++ b/hometerview/Info.plist
@@ -5,7 +5,7 @@
 	<key>KAKAO_APP_KEY</key>
 	<string>f811c290471ec82c6e65a3c0c68a3bbc</string>
 	<key>BaseURL</key>
-	<string></string>
+	<string>http://13.125.75.159:8080/api/v1/</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>PRETENDARD-BLACK.OTF</string>
